device_manager: missing NULL checks.

We should investigate why there are anonymous or unset attributes. But
at least let's not KDL because of it.

Fixes #16038.

Change-Id: Ifd49475e25ce8dcc3e98bc22df81f0e4f493f915
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2710
Reviewed-by: waddlesplash <waddlesplash@gmail.com>